(lang dune 2.7)
(name otfed)
(version 0.3.1)
(authors "Takashi Suwa")
(maintainers "Takashi Suwa")
(license MIT)
(source (github gfngfn/otfed))
(homepage "https://github.com/gfngfn/otfed")
(bug_reports "https://github.com/gfngfn/otfed/issues")
(generate_opam_files true)

(package
 (name otfed)
 (synopsis "An OpenType encoder/decoder for OCaml")
 (description "")
 (depends
  (ocaml (>= 4.12))
  (dune (>= 2.0))
  (base (>= v0.15.0))
  (stdio (>= v0.15.0))
  (ppx_deriving (>= 4.4.1))
  (uutf (>= 1.0.2))
  (alcotest (and :with-test (>= 1.4.0)))
  (ppx_inline_test (>= v0.15.0))))
